--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,15 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.input {
+ display: flex;
+ gap: 5px;
+}
+.Add {
+  background-color: black;
+  margin-top: 20px;
+  
+
 }
